# oop-2026

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
practice-1/: CMakeLists.txt  README.md  build.bat  build.sh
practice-1/src/: main.c  main.cpp
practice-10/: CMakeLists.txt  api.cppm  config.json  main.cpp  spiral.cpp  spiral.cppm  tictactoe.cppm
practice-10/lib/: API.cppm  Assets.cppm  Config.cppm  GameLogic.cppm  Render.cppm  Renderer.cppm  TicTacToe.cppm
practice-10/src/: main.cpp
practice-2/: CMakeLists.txt  README.md
practice-2/1-Expressions/: CMakeLists.txt
practice-2/1-Expressions/src/: main.cpp
practice-2/2-Conditional-operator/: CMakeLists.txt
practice-2/2-Conditional-operator/src/: main.cpp
practice-2/3-Multiple-choice-operator/: CMakeLists.txt
practice-2/3-Multiple-choice-operator/src/: main.cpp
practice-2/4-Cycles/: CMakeLists.txt
practice-2/4-Cycles/src/: main.cpp
practice-2/src/: main.cpp
practice-2/task1/: main.cpp
practice-2/task2/: main.cpp
practice-2/task3/: main.cpp
practice-2/task4/: main.cpp
practice-2/task5/: main.cpp
practice-2/task6/: main.cpp
practice-3/: CMakeLists.txt  README.md
practice-3/src/: main.cpp
practice-4/: CMakeLists.txt  README.md
practice-4/src/: main.cpp
practice-5/: CMakeLists.txt  README.md
practice-5/src/: main.cpp
practice-6/: CMakeLists.txt  README.md
practice-6/src/: main.cpp
practice-7/: CMakeLists.txt  README.md
practice-7/1-ICounter/: CMakeLists.txt  Практика 7.1.md
practice-7/1-ICounter/src/: main.cpp
practice-7/2-Serialize/: CMakeLists.txt
practice-7/2-Serialize/api/: CMakeLists.txt  api.ixx  serializable.cppm  serializer.cppm
practice-7/2-Serialize/implementations/: CMakeLists.txt  binary_serializer.cppm  implementations.ixx  json_serializer.cppm  user.cppm  xml_serializer.cppm
practice-7/2-Serialize/src/: CMakeLists.txt  main.cpp
practice-7/2-Serialize/utils/: CMakeLists.txt  universal_value.cppm
practice-8/: CMakeLists.txt  README.md
practice-8/collections/: Dictionary.cppm  HashSet.cppm  List.cppm  Queue.cppm  Stack.cppm  collections.ixx
practice-8/containers/: CMakeLists.txt  Dictionary.cppm  HashSet.cppm  List.cppm  Queue.cppm  Stack.cppm  containers.ixx
practice-8/enumerators/: CMakeLists.txt  DictionaryEnumerator.cppm  HashSetEnumerator.cppm  ListEnumerator.cppm  QueueEnumerator.cppm  StackEnumerator.cppm  enumerators.ixx
practice-8/examples/: CMakeLists.txt  DictionaryExample.cppm  HashSetExample.cppm  ListExample.cppm  QueueExample.cppm  StackExample.cppm  examples.ixx
practice-8/interfaces/: CMakeLists.txt  ICollection.cppm  IEnumerable.cppm  IEnumerator.cppm  interface.ixx  interfaces.ixx
practice-8/simple_usages/: CMakeLists.txt  DictionaryUsages.cppm  ListUsages.cppm  QueueUsages.cppm  SetUsages.cppm  StackUsages.cppm  simple_usages.ixx
practice-8/src/: CMakeLists.txt  main.cpp
practice-9/: CMakeLists.txt
practice-9/src/: main.cpp
