cmake_minimum_required(VERSION 4.2.0)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_MODULE_STD ON)

# https://github.com/Kitware/CMake/blob/master/Help/dev/experimental.rst
if(CMAKE_VERSION VERSION_GREATER_EQUAL "4.3.0")
    set(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD 451f2fe2-a8a2-47c3-bc32-94786d8fc91b)
elseif(CMAKE_VERSION VERSION_GREATER_EQUAL "4.2.0")
    set(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD d0edc3af-4c50-42ea-a356-e2862fe7a444)
endif()

project(oop-2026 LANGUAGES CXX)

if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    add_compile_options(-Wall -Wextra -Wpedantic)
elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    add_compile_options(/utf-8 /W4)
endif()

add_subdirectory(practice-1)
add_subdirectory(practice-2)
add_subdirectory(practice-3)
add_subdirectory(practice-4)
add_subdirectory(practice-5)
add_subdirectory(practice-6)
add_subdirectory(practice-7)
add_subdirectory(practice-8)
add_subdirectory(practice-9)
add_subdirectory(practice-10)